Filter reset and Contrast Bug fixed
Contrast bug was no longer working, so function is now in tsx filter.
Reset now includes filters.

--- a/AccessibilityPortal/src/CommonComponents/AccessibilityMenu/AccessibilityMenu.scss
+++ b/AccessibilityPortal/src/CommonComponents/AccessibilityMenu/AccessibilityMenu.scss
@@ -250,10 +250,6 @@
     font-size: 18px;
 }
 
-.high-contrast {
-    filter: contrast(150%);
-}
-
 .increased-spacing {
     letter-spacing: 2px;
 }
